<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ecommerce_app</string>

    <string name="check_out" tools:ignore="MissingTranslation">Check Out</string>
    <string name="payment" tools:ignore="MissingTranslation">Payment</string>

    <string name="egy" tools:ignore="MissingTranslation">EGY</string>
    <string name="_250_0" tools:ignore="MissingTranslation">250.0</string>
    <string name="total_amount" tools:ignore="MissingTranslation">Total: </string>
    <string name="cvv" tools:ignore="MissingTranslation">CVV</string>
    <string name="mm_yy" tools:ignore="MissingTranslation">MM / YY</string>
    <string name="card_number" tools:ignore="MissingTranslation">CARD NUMBER</string>
    <string name="paypal_logo" tools:ignore="MissingTranslation">PayPal Logo</string>
    <string name="mastercard_logo" tools:ignore="MissingTranslation">MasterCard Logo</string>
    <string name="visa_logo" tools:ignore="MissingTranslation">Visa Logo</string>
    <string name="logo" tools:ignore="MissingTranslation">Logo</string>

    <!-- Splash Screen -->
    <string name="project_name" translatable="false" tools:ignore="MissingTranslation">Project Name</string>

    <!-- OnBoarding Screen -->
    <string name="title1" tools:ignore="MissingTranslation">The Right Address \nFor Shopping Anyday</string>
    <string name="get_started" tools:ignore="MissingTranslation">Get Started</string>
    <string name="title2" tools:ignore="MissingTranslation">It’s now very easy to reach the best quality \namong all the product on the Internet</string>

    <!-- SignIn Screen -->
    <string name="welcome_login_to_your_account" tools:ignore="MissingTranslation">Welcome,\nLogin to your account</string>
    <string name="login" tools:ignore="MissingTranslation">Login</string>
    <string name="forgot_password" tools:ignore="MissingTranslation">Forgot Password?</string>
    <string name="Sign_In" tools:ignore="MissingTranslation">Not Registered Yet, Sign Up!</string>

    <!-- SignUp Screen -->
    <string name="welcome_sign_up_to_continue" tools:ignore="MissingTranslation">Welcome! Sign up to continue.</string>
    <string name="username_helper_text" tools:ignore="MissingTranslation">Enter your username</string>
    <string name="enter_your_name" tools:ignore="MissingTranslation">Enter your name</string>
    <string name="phone_number" tools:ignore="MissingTranslation">Phone Number</string>
    <string name="email_address" tools:ignore="MissingTranslation">Email Address</string>
    <string name="password" tools:ignore="MissingTranslation">Password</string>
    <string name="confirm_password" tools:ignore="MissingTranslation">Confirm Password</string>
    <string name="sign_up" tools:ignore="MissingTranslation">Sign Up</string>
    <string name="already_registered_sign_in" tools:ignore="MissingTranslation">Already registered? Sign In</string>
    <string name="empty_fields_error" tools:ignore="MissingTranslation">Please fill in all fields</string>
    <string name="passwords_do_not_match" tools:ignore="MissingTranslation">Passwords do not match</string>

    <!-- Forgot Password Screen -->
    <string name="forgot_password_title" tools:ignore="MissingTranslation">Forgot Password</string>
    <string name="forgot_password_desc" tools:ignore="MissingTranslation">Enter the email address associated with your account.</string>
    <string name="reset_password" tools:ignore="MissingTranslation">Reset Password</string>
    <string name="email_required" tools:ignore="MissingTranslation">Please enter a valid email address.</string>
    <string name="reset_email_sent" tools:ignore="MissingTranslation">Reset email sent.</string>

    <!-- Email Verification Screen -->
    <string name="emailVerification" tools:ignore="MissingTranslation">Get your code</string>
    <string name="code_sent_to_your_email" tools:ignore="MissingTranslation">Code sent to your email</string>
    <string name="verification_desc" tools:ignore="MissingTranslation">Please, enter the code sent to your email address.</string>
    <string name="verify" tools:ignore="MissingTranslation">Verify</string>
    <string name="email_verification" tools:ignore="MissingTranslation">Email Verification</string>

    <!-- New Password Screen -->
    <string name="newPasswordTitle" tools:ignore="MissingTranslation">Enter new password</string>
    <string name="newPasswordDesc" tools:ignore="MissingTranslation">Your new password must be different from previously used passwords.</string>
    <string name="confirm_new_password" tools:ignore="MissingTranslation">Confirm new Password</string>
    <string name="confirm" tools:ignore="MissingTranslation">Confirm</string>

    <!-- Payment -->
    <string name="total_amount_format" translatable="false" tools:ignore="MissingTranslation">%1$.2f EGP</string>
    <string name="mariam_mohamed">Mariam Mohamed</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="orders">Orders</string>
    <string name="MyCart">My Cart</string>
    <string name="billing_and_addresses">Billing And Addresses</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="TrackOrder">Track Order</string>
    <string name="SearchAnything">Search anything</string>
    <string name="Categories">Categories</string>
    <string name="PopularProducts">Popular products</string>
    <string name="category_sale">Sale</string>
    <string name="category_dresses">Dresses</string>
    <string name="category_tshirts">T-shirts</string>
    <string name="category_pants">Pants</string>
    <string name="category_jeans">Jeans</string>
    <string name="category_see_all">See all</string>
    <string name="Cancel">Cancel</string>
    <string name="user_name">User Name</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="new_user_name">New User Name</string>
    <string name="new_email_address">New Email Address</string>
    <string name="new_Password">New Password</string>
    <string name="update">Update</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="addToCart">ADD TO CART</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="setting">Setting</string>
    <string name="egp_0_00">EGP 0.00</string>
    <string name="categories">Categories</string>
    <string name="textview">TextView</string>
    <string name="confirm_data">Confirm Data</string>
    <string name="pay_online">Pay online</string>
    <string name="pay_offline">Pay offline</string>
    <string name="enter_your_data">(Enter Your Data)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="apartment">Apartment</string>
    <string name="floor">Floor</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal code</string>
    <string name="order_will_be_recived_during_4_days_cash_on_delivery">Order will be recived during 4 days Cash on Delivery</string>
    <string name="ok">OK</string>
    <string name="favorite">Favorite</string>
    <string name="favourit">Favourit</string>

</resources>
