<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="Back Icon"
            android:padding="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MyCart"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_margin="6dp">
        </TextView>
    </LinearLayout>

    <!-- Cart Items RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:scrollbars="vertical"
        tools:listitem="@layout/cart_item"/>

    <!-- Total Price and Checkout Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/total_background"
        android:layout_margin="5dp">

        <!-- Total Price -->
        <TextView
            android:id="@+id/totalPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egp_0_00"
            android:textSize="30dp"
            android:layout_margin="8dp"/>
        </LinearLayout>
    <!-- Checkout Button -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingTop="8dp">
        <!-- Online Payment Button -->
        <Button
            android:id="@+id/btnOnlinePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_online"
            android:backgroundTint="@color/purple"
            android:layout_weight="1"
            android:layout_margin="2dp" />

        <!-- Offline Payment Button -->
        <Button
            android:id="@+id/btnOfflinePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_offline"
            android:backgroundTint="@color/light_purple"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:layout_margin="2dp"/>
    </LinearLayout>
</LinearLayout>
