<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/cardbox_background">
    <!-- Profile Section -->
    <LinearLayout
        android:id="@+id/myprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@android:color/white"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">
        <!-- Profile Picture with Edit Icon -->
        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp">
        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/person"
            android:layout_marginEnd="16dp"
            android:contentDescription="Profile picture"
            android:scaleType="centerCrop" />
        </FrameLayout>

        <!-- Profile Name -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mariam_mohamed"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>


        </LinearLayout>
    </LinearLayout>
    <!-- Orders Section -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/orders"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

        <!-- All Orders -->
        <LinearLayout
            android:id="@+id/allOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/carts"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MyCart"
                android:textSize="20sp"/>
        </LinearLayout>

        <!-- Track Order -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/search"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TrackOrder"
                android:textSize="20sp"/>
        </LinearLayout>

        <!-- Billing and Addresses -->
        <LinearLayout
            android:id="@+id/goBillingAndAddresses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/bills"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billing_and_addresses"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Notifications Section -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/notifications"
        android:textSize="16sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@android:color/white"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/notify"
            android:layout_marginEnd="12dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notifications"
            android:textSize="20sp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

    </LinearLayout>
    <!-- Regional Section -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/regional"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="16dp">

        <!-- Language -->
        <LinearLayout
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/language"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="20sp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/language_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icmenu"
                android:contentDescription="Menu"/>
        </LinearLayout>


        <!-- Logout -->
        <LinearLayout
            android:id="@+id/logoutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/logout"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
